--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -137,6 +137,11 @@ button{
 
     
 }
+
+.solo{
+    color: #ffffff;
+}
+
 .s-line #searchBtn:hover{
     cursor: pointer;
     outline: none;
@@ -165,17 +170,70 @@ button{
     align-items: center;
     flex-direction: column;
     top: 50%;
-    padding: 50px;
+    min-width: 600px;
+    min-height: 400px;
     left: 50%;
     width: auto;
     height: auto;
-    
+    padding: 20px 50px;
     background: #232323;
     color: #ffffff;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
 
-#planetInfoBlock button{
-    align-self: end;
+.info-wrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
+
+#planetInfoBlock .title-nav{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+}
+.info-blocks{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+}
+.title-nav h3{
+    font-size: 30px;
+    font-family: 'Star Jedi', arial;
+}
+.info-blocks h4{
+    text-decoration: underline 2px orange;
+    font-family: 'Star Jedi', arial;
+    letter-spacing: 2px;
+}
+
+.info-blocks .left{
+    width: 100%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+}
+.info-blocks .left .spec-sec > li{
+    margin: 5px;
+}
+.info-blocks .left .spec-sec > li>span{
+    text-decoration: underline 1px orange;
+}
+.info-blocks .right{
+    width: 100%;
+    min-height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+}
+
