--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -207,6 +207,12 @@ button{
     font-size: 30px;
     font-family: 'Star Jedi', arial;
 }
+.title-nav h3 p{
+    font-size: 10px;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
 .info-blocks h4{
     text-decoration: underline 2px orange;
     font-family: 'Star Jedi', arial;
