--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,4 +1,4 @@
-@import url(https://allfont.net/allfont.css?fonts=star-jedi);
+@font-face{font-family:star jedi;font-style:normal;font-weight:400;src:local('Star Jedi'),local('StarJedi-Regular'),url(http://allfont.net/cache/fonts/star-jedi_108a0c1f596b5c0a80628b4566a9f336.woff) format('woff'),url(http://allfont.net/cache/fonts/star-jedi_108a0c1f596b5c0a80628b4566a9f336.ttf) format('truetype')}
 h1,h2{
     font-family: 'Star Jedi', arial;
     text-align: center;
