micro fix for adaptation

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -168,6 +168,7 @@ button{
     width: 100%;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 #Options > li >button {
